Wip 5 edge spacing (#9) (resolves #5)
* Changed edge to percentage

* Format for mobile, smooth transition to sizedown

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 body {
-  margin: 50px 300px;
+  margin: 50px 20%;
   font-family: "Roboto", sans-serif;
+  transition: margin 0.35s;
 }
 
 h1 {
@@ -11,4 +12,10 @@ h1 {
 
 h2 {
   margin-top: 50px;
+}
+
+@media only screen and (max-width: 620px) {
+  body {
+    margin: 50px 10%;
+  }
 }
